# box2d-optimized

./: .editorconfig  CMakeLists.txt  README.md  build.sh
benchmarks/: CMakeLists.txt  benchmarks.h  full.cpp  main.cpp  single.cpp
include/box2d/: b2ParticleSystem.h  b2_block_allocator.h  b2_body.h  b2_broad_phase.h  b2_chain_shape.h  b2_circle_shape.h  b2_collision.h  b2_common.h  b2_contact.h  b2_contact_manager.h  b2_distance.h  b2_distance_joint.h  b2_draw.h  b2_dynamic_tree.h  b2_edge_shape.h  b2_fixture.h  b2_free_list.h  b2_friction_joint.h  b2_gear_joint.h  b2_geometry.h  b2_growable_buffer.h  b2_growable_stack.h  b2_intrusive_list.h  b2_joint.h  b2_math.h  b2_motor_joint.h  b2_mouse_joint.h  b2_particle.h  b2_particle_group.h  b2_particle_system.h  b2_polygon_shape.h  b2_prismatic_joint.h  b2_pulley_joint.h  b2_revolute_joint.h  b2_rope.h  b2_settings.h  b2_shape.h  b2_slab_allocator.h  b2_stack_allocator.h  b2_time_of_impact.h  (+8 more)
samples/: CMakeLists.txt  draw.cpp  test.cpp
samples/tests/: character_collision.cpp  distance_test.cpp  dynamic_tree.cpp  polygon_shapes.cpp  time_of_impact.cpp  wave_machine.cpp
src/: CMakeLists.txt
src/collision/: b2_broad_phase.cpp  b2_chain_shape.cpp  b2_circle_shape.cpp  b2_collide_circle.cpp  b2_collide_edge.cpp  b2_collide_polygon.cpp  b2_collision.cpp  b2_distance.cpp  b2_dynamic_tree.cpp  b2_edge_shape.cpp  b2_polygon_shape.cpp  (+1 more)
testbed/: CMakeLists.txt  draw.cpp  draw.h  main.cpp  settings.cpp  settings.h  test.cpp  test.h
unit-test/: collision_test.cpp  hello_world.cpp  joint_test.cpp  math_test.cpp  world_test.cpp
(+131 files in other folders)
